--- a/serius.html
+++ b/serius.html
@@ -12,7 +12,7 @@
     <!-- Hero Section-->
     <section class="hero">
         <div class="menu">
-            <p class="menu-logo"><span class="menu-logo-txt1">E-</span><span class="menu-logo-txt2">sheba</span></p>
+            <p class="menu-logo"><span class="menu-logo-txt1">E-</span><span class="menu-logo-txt2">sheba X </span></p>
             <div class="menu-button-pack">
                 <button class="menu-button-signup">Sign up</button>
                 <button class="menu-button-login">Login</button>
